Fixed horizontal scroll issue on Chrome

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 
   background-color: var(--main-bg-color);
   min-height: 100vh;
-  min-width: 100vw;
 
   display: flex;
   flex-direction: column;
